--- a/src/sass/palette.scss
+++ b/src/sass/palette.scss
@@ -1,6 +1,8 @@
 $green: rgba(26, 83, 92, 1);
 $light-green: rgba(78, 205, 196, 1);
-$white: rgba(247, 255, 247, 1);
+$white: rgba(255, 255, 250, 1);
 $pink: rgba(255, 107, 107, 1);
-$shadow-ping: rgba(232, 97, 97, 1);
+$shadow-pink: rgba(232, 97, 97, 1);
 $yello: rgba(255, 230, 109, 1);
+$grey: rgba(51, 49, 56, 1);
+$hard-pink: rgba(255, 86, 84, 1);
