--- a/src/components/TopMenu/Topmenu.scss
+++ b/src/components/TopMenu/Topmenu.scss
@@ -31,4 +31,11 @@
       color: #fffffa;
       text-decoration: none !important;
     }
+
+    .logo {
+      width: 92px;
+      position: absolute;
+      left: 0px;
+      top: -5px;
+    }
 };
